<resources>
    <string name="app_name" translatable="false">Letsplay</string>

    <string name="registration">Registration</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="password_again">Password again</string>
    <string name="next">Next</string>
    <string name="have_account">Already have account</string>
    <string name="doesnot_match_error">Passwords do not match</string>
    <string name="select_city">Select city</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="ok" translatable="false">OK</string>

    <string name="confirm">Confirm</string>
    <string name="phone_verification">Phone verification</string>
    <string name="verification_text">This will help us authenticate every user of the service, for your own safety.</string>
    <string name="resend_sms_text">Resend SMS code?</string>
    <string name="resend">Resend</string>
    <string name="resend_success">SMS code was send</string>
    <string name="limit_exceed">You\'ve reached limit. Please try again later</string>

    <string name="login">Log In</string>
    <string name="forgot_password">Forgot password</string>
    <string name="forgot_password_text">Enter the phone number you\'ve entered when you registered. You\'ll receive a text code to confirm.</string>

    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="create_match">Create match</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="password_login_empty">Please enter phone and/or password</string>

    <string name="edit_profile">Profile editing</string>
    <string name="personal_information">Personal information</string>
    <string name="name">Name</string>
    <string name="nickname">Nickname*</string>
    <string name="surname">Surname</string>
    <string name="gender">Gender*</string>
    <string name="birth_date">Date of birth</string>
    <string name="city">City*</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>

    <string name="profile_full_name" translatable="false">%s %s %s</string>
    <plurals name="profile_gender_age">
        <item formatted="true" quantity="one">%s, %s years</item>
        <item formatted="true" quantity="few">%s, %s years</item>
        <item formatted="true" quantity="many">%s, %s years</item>
        <item formatted="true" quantity="other">%s, %s years</item>
    </plurals>

    <string name="field_must_not_be_empty">Fields must not be empty</string>
    <string name="registration_success">You successfully registered. Now you can login into the system with your phone number</string>
    <string name="enter_code">Please enter code from SMS</string>

    <string name="rating">Rating</string>
    <string name="friends">Friends</string>
    <string name="find_friends">Find friends</string>
    <string name="current_match">Current matches</string>
    <string name="current_match_date">The next match %s</string>
    <string name="played_match">Played matches</string>
    <string name="played_match_date">The last match %s</string>
    <string name="friend_request">Friend request</string>
    <string name="add_friend">Add friend</string>
    <string name="cancel_request">Cancel request</string>
    <string name="remove_friend">Remove friend</string>

    <string name="fields">Fields</string>
    <string name="players">Players</string>
    <string name="matches">Matches</string>
    <string name="player_not_found">Player not found</string>


    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

</resources>
