<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/act_home"
        app:showAsAction="always"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/act_favorite"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorites" />

    <item
        android:id="@+id/act_create_match"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_create_match"
        android:title="@string/create_match" />

    <item
        android:id="@+id/act_notification"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_notification"
        android:title="@string/notification" />

    <item
        android:id="@+id/act_profile"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

</menu>