<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textView1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:text="@string/forgot_password_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView1"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusTopStart="4dp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="?attr/listPreferredItemHeight"
            android:background="@color/white"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/next"
        android:layout_height="?attr/listPreferredItemHeight"
        android:layout_width="match_parent"
        android:text="@string/next"
        app:icon="@drawable/ic_goto_white"
        app:iconGravity="end"
        android:paddingStart="32dp"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>