<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.registration.RegistrationActivity">

    <ProgressBar
        android:id="@+id/progress"
        android:layout_height="2dp"
        android:layout_width="match_parent"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:max="2"
        android:progress="1"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/registration"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progress"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusTopStart="4dp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView1">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="?attr/listPreferredItemHeight"
            android:background="@color/white"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusTopStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="?attr/listPreferredItemHeight"
            android:background="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_again"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusTopStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="?attr/listPreferredItemHeight"
            android:background="@color/white"
            android:hint="@string/password_again"
            android:inputType="textPassword"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <include
        android:id="@+id/bank_name"
        android:layout_width="match_parent"
        android:layout_height="?attr/listPreferredItemHeight"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        layout="@layout/table_cell_optional"
        app:layout_constraintTop_toBottomOf="@id/password_again"/>


    <Button
        android:id="@+id/next"
        android:layout_height="?attr/listPreferredItemHeight"
        android:layout_width="match_parent"
        android:text="@string/next"
        app:icon="@drawable/ic_goto_white"
        app:iconGravity="end"
        android:paddingStart="32dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toTopOf="@id/have_account"/>

    <TextView
        android:id="@+id/have_account"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/have_account"
        android:layout_marginBottom="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>