<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/textView1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/phone_verification"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textAlignment="center"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:text="@string/verification_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView1"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/timerLayout"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="@drawable/rounded_gray_bg"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:srcCompat="@drawable/ic_timer"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/timer"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            tool:text="00:00"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/imageView1"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.jkb.vcedittext.VerificationCodeEditText
        android:id="@+id/code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:bottomLineHeight="2dp"
        app:bottomLineNormalColor="@color/light_gray"
        app:bottomLineSelectedColor="@color/colorAccent"
        app:figures="4"
        android:layout_marginTop="32dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timerLayout"
        app:selectedBackgroundColor="@color/white"
        app:verCodeMargin="16dp" />

    <Button
        android:id="@+id/resend"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="?attr/listPreferredItemHeight"
        android:text="@string/resend"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/next"
        android:layout_height="?attr/listPreferredItemHeight"
        android:layout_width="match_parent"
        android:text="@string/next"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>