<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:animateLayoutChanges="true">

    <ImageView
        android:id="@+id/back"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="?attr/actionBarSize"
        app:srcCompat="@drawable/ic_back"
        app:tint="@color/black"
        android:padding="16dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/search"
        android:hint="@string/search"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="0dp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintEnd_toStartOf="@id/clear"/>

    <ImageView
        android:id="@+id/clear"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="?attr/actionBarSize"
        android:padding="18dp"
        android:background="@color/white"
        app:srcCompat="@drawable/ic_close"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!--    <include-->
    <!--        android:id="@+id/toolbar"-->
    <!--        layout="@layout/search_toolbar"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab"
        android:background="@color/white"
        app:tabTextColor="@color/black"
        app:tabSelectedTextColor="@color/colorAccent"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/search">

        <com.google.android.material.tabs.TabItem
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/fields"/>

        <com.google.android.material.tabs.TabItem
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/players"/>

    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:fadingEdge="horizontal"
        android:fadingEdgeLength="30dp"
        android:requiresFadingEdge="vertical"
        android:scrollbars="none"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/tab"
        app:layout_constraintBottom_toTopOf="@id/hover"/>

    <View
        android:id="@+id/hover"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black_transparent"
        app:layout_constraintTop_toBottomOf="@id/rv"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>